Updates on HomeController

--- a/Fyxme/Views/Home/Index.cshtml
+++ b/Fyxme/Views/Home/Index.cshtml
@@ -120,8 +120,8 @@
                                                 @Html.ValidationMessageFor(model => model.Email, null, new { @class = "field-validation-error" })
                                             </div>
                                             <div id="spacer-input">
-                                                @Html.TextBoxFor(model => model.MobilePhone, new { @class = "textbox", placeholder = "Mobile Phone Number" })
-                                                @Html.ValidationMessageFor(model => model.MobilePhone, null, new { @class = "field-validation-error" })
+                                                @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "textbox", placeholder = "Mobile Phone Number" })
+                                                @Html.ValidationMessageFor(model => model.PhoneNumber, null, new { @class = "field-validation-error" })
                                             </div>
                                             <div id="spacer-input">
                                                 @Html.TextBoxFor(model => model.ZipCode, new { @class = "textbox", placeholder = "Zip Code" })
