Added admin email template and others bug fixes. Ready for QA.

--- a/Fyxme/Views/Home/Index.cshtml
+++ b/Fyxme/Views/Home/Index.cshtml
@@ -377,6 +377,15 @@
     </div>
     <!-- End -->
 
+
+    <!-- Modal HTML embedded directly into document -->
+    <div id="ex1" style="display:none;">
+        <p>Thanks for clicking.  That felt good.  <a href="#" rel="modal:close">Close</a> or press ESC</p>
+    </div>
+
+    <!-- Link to open the modal -->
+    <p><a href="#ex1" rel="modal:open">Open Modal</a></p>
+
 <script>
 
     function ddlUpdateValues(controller, value, object)
