--- a/Fyxme/Views/Home/RequestSent.cshtml
+++ b/Fyxme/Views/Home/RequestSent.cshtml
@@ -11,6 +11,9 @@
             <div class="col-md-12">
                 <h1 class="caption_center_white_1">Confirmation!</h1>
                 <h1 class="caption_center_white_2">Your request has been sent succesfully. You will receive a quote shortly.</h1>
+                <div style="text-align:center;margin-top:125px;">
+                    <button id="btnSubmit" class="btn-upload" type="submit" onclick="window.location.href='@Url.Content("~/Home")'">Ok</button>
+                </div>
             </div>
         </div>
     </div>
