--- a/Fyxme/Views/Shared/_Layout.cshtml
+++ b/Fyxme/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
     
     <!-- Top Menu -->
     <div id="top_menu">
-        <div id="fyxme_logo"><img src="@Url.Content("~/Content/Images/fyxmy_logo.svg")" width="160" height="67" alt="" /></div>
+        <div id="fyxme_logo"><a href="@Url.Content("~/Home")"><img src="@Url.Content("~/Content/Images/fyxmy_logo.svg")" width="160" height="67" border="0" alt="" /></a></div>
         <div id="options">
 
             <div class="desktop-only">
