--- a/Fyxme/Content/Css/Site.css
+++ b/Fyxme/Content/Css/Site.css
@@ -11,7 +11,7 @@ html, body {
 	margin-bottom: 0px;
 	padding-bottom: 300px;
     text-align: center;
-    height:2000px;
+    /*/height:2000px;*/
 }
 
 @media (min-width:1030px) {
