--- a/Fyxme/Views/Shared/_Layout.cshtml
+++ b/Fyxme/Views/Shared/_Layout.cshtml
@@ -108,6 +108,19 @@
     <!-- End -->
 
     </div>
-        
+ 
+    <!-- Google Tag Manager -->
+    <noscript>
+        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-NWGNMZ"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <script>
+    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+     '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+     })(window,document,'script','dataLayer','GTM-NWGNMZ');</script>
+    <!-- End Google Tag Manager -->
+          
 </body>
 </html>
