--- a/Fyxme/Views/Home/Index.cshtml
+++ b/Fyxme/Views/Home/Index.cshtml
@@ -183,7 +183,7 @@
             <div class="col-md-12">
                 <div class="tech-bottom">
                     <div>Are you a talented car technician?</div>
-                    <div class="btn-default-blue tech-btn" id="btn-tech">WORK WITH US</div>
+                    <div class="btn-default-blue tech-btn" id="btn-tech" onclick="window.location.href='WorkWithUs/'">WORK WITH US</div>
                 </div>
             </div>
         </div>
